--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -24,8 +24,16 @@ jobs:
       run: |
         sudo apt-get update
         sudo apt-get install -y clamav clamav-daemon
-        sudo systemctl start clamav-daemon
+        sudo mkdir -p /var/log/clamav
+        sudo chown clamav:clamav /var/log/clamav
+        sudo chmod 750 /var/log/clamav
+        sudo systemctl stop clamav-freshclam
         sudo freshclam
+        sudo systemctl start clamav-daemon
+        # Wait for daemon to start
+        sleep 5
+        # Check daemon status
+        sudo systemctl status clamav-daemon
 
     - name: Run Tests
       run: |
