--- a/.github/workflows/version-bump.yml
+++ b/.github/workflows/version-bump.yml
@@ -5,10 +5,6 @@ on:
     branches:
       - main
 
-permissions:
-  contents: write
-  packages: write
-
 jobs:
   version:
     runs-on: ubuntu-latest
@@ -16,17 +12,12 @@ jobs:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0
-          token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Bump version and push tag
         id: semver
         uses: anothrNick/github-tag-action@1.67.0
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GH_PAT }}
           WITH_V: true
           DEFAULT_BUMP: patch
           RELEASE_BRANCHES: main
-          INITIAL_VERSION: 0.1.0
-
-      - name: Output version
-        run: echo "Bumped version to ${{ steps.semver.outputs.new_tag }}" 
