--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -4,26 +4,34 @@ on:
   push:
     tags:
       - "v*"
-    paths-ignore:
-      - "docs/**"
-      - "examples/**"
-      - "README.md"
-      - "README"
+
+permissions:
+  contents: write
+  packages: write
 
 jobs:
-  release:
-    name: Create Release
+  build:
+    name: Build App
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@v5
         with:
           fetch-depth: 0
 
       - name: Set up Go
-        uses: actions/setup-go@v5
+        uses: actions/setup-go@v6
         with:
           go-version: "1.25"
           cache: true
+
+      - name: Install Protocol Buffers compiler
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y protobuf-compiler
+
+      - name: Generate Proto Files
+        run: |
+          ./scripts/generate-proto.sh
 
       - name: Update Go dependencies
         run: |
@@ -33,6 +41,111 @@ jobs:
       - name: Build Binary
         run: |
           ./scripts/build.sh
+
+      - name: Upload Artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: build-artifacts
+          path: bin/
+          retention-days: 1
+
+  docker-build:
+    name: Build Docker Image (linux/${{ matrix.platform }})
+    runs-on: ubuntu-latest
+    needs: build
+    strategy:
+      matrix:
+        platform: [amd64, arm64]
+    steps:
+      - uses: actions/checkout@v5
+        with:
+          fetch-depth: 0
+
+      - name: Set lowercase repo owner
+        run: echo "REPO_OWNER_LOWER=$(echo ${{ github.repository_owner }} | tr '[:upper:]' '[:lower:]')" >> $GITHUB_ENV
+
+      - name: Download Build Artifacts
+        uses: actions/download-artifact@v4
+        with:
+          name: build-artifacts
+          path: bin/
+
+      - name: Change permissions
+        run: |
+          chmod +x bin/*
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Log in to GitHub Container Registry
+        uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.repository_owner }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Build and push image for linux/${{ matrix.platform }}
+        uses: docker/build-push-action@v6
+        with:
+          context: .
+          file: Dockerfile
+          platforms: linux/${{ matrix.platform }}
+          push: true
+          tags: ghcr.io/${{ env.REPO_OWNER_LOWER }}/clamav-api:${{ github.ref_name }}-linux-${{ matrix.platform }}
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
+          provenance: false
+          sbom: false
+          build-args: |
+            TARGETARCH=${{ matrix.platform }}
+
+  create-manifests:
+    name: Create Multi-Arch Manifests
+    runs-on: ubuntu-latest
+    needs: docker-build
+    steps:
+      - name: Set lowercase repo owner
+        run: echo "REPO_OWNER_LOWER=$(echo ${{ github.repository_owner }} | tr '[:upper:]' '[:lower:]')" >> $GITHUB_ENV
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Log in to GitHub Container Registry
+        uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.repository_owner }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Create and push multi-arch manifest for clamav-api
+        run: |
+          docker manifest create ghcr.io/${{ env.REPO_OWNER_LOWER }}/clamav-api:${{ github.ref_name }} \
+            ghcr.io/${{ env.REPO_OWNER_LOWER }}/clamav-api:${{ github.ref_name }}-linux-amd64 \
+            ghcr.io/${{ env.REPO_OWNER_LOWER }}/clamav-api:${{ github.ref_name }}-linux-arm64
+          docker manifest push ghcr.io/${{ env.REPO_OWNER_LOWER }}/clamav-api:${{ github.ref_name }}
+
+      - name: Create and push latest tag
+        if: "!contains(github.ref_name, 'rc') && !contains(github.ref_name, 'beta')"
+        run: |
+          docker manifest create ghcr.io/${{ env.REPO_OWNER_LOWER }}/clamav-api:latest \
+            ghcr.io/${{ env.REPO_OWNER_LOWER }}/clamav-api:${{ github.ref_name }}-linux-amd64 \
+            ghcr.io/${{ env.REPO_OWNER_LOWER }}/clamav-api:${{ github.ref_name }}-linux-arm64
+          docker manifest push ghcr.io/${{ env.REPO_OWNER_LOWER }}/clamav-api:latest
+
+  create-release:
+    name: Create GitHub Release
+    runs-on: ubuntu-latest
+    needs: create-manifests
+    steps:
+      - uses: actions/checkout@v5
+        with:
+          fetch-depth: 0
+
+      - name: Download Build Artifacts
+        uses: actions/download-artifact@v4
+        with:
+          name: build-artifacts
+          path: bin/
 
       - name: Generate Changelog
         id: changelog
